--- a/Application/Admin/View/Public/header.html
+++ b/Application/Admin/View/Public/header.html
@@ -24,4 +24,8 @@
     <link href="__PUBLIC__/Admin/css/bootstrap.min.css" rel="stylesheet">
     <link href="__PUBLIC__/Admin/css/style.min.css" rel="stylesheet">
     <link href="__PUBLIC__/Admin/css/login.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="__PUBLIC__/Admin/css/plugins/webuploader/webuploader.css">
+    <link rel="stylesheet" type="text/css" href="__PUBLIC__/Admin/css/demo/webuploader-demo.min.css">
+    <link href="__PUBLIC__/Admin/css/plugins/dropzone/basic.css" rel="stylesheet">
+    <link href="__PUBLIC__/Admin/css/plugins/dropzone/dropzone.css" rel="stylesheet">
 </head>
