--- a/Application/Admin/View/Public/js.html
+++ b/Application/Admin/View/Public/js.html
@@ -22,3 +22,4 @@
 <script src="__PUBLIC__/Admin/js/plugins/easypiechart/jquery.easypiechart.js"></script>
 <script src="__PUBLIC__/Admin/js/plugins/sparkline/jquery.sparkline.min.js"></script>
 <script src="__PUBLIC__/Admin/js/demo/sparkline-demo.min.js"></script>
+<script src="__PUBLIC__/Admin/js/plugins/dropzone/dropzone.js"></script>
