--- a/Application/Admin/View/Core/index.html
+++ b/Application/Admin/View/Core/index.html
@@ -9,7 +9,13 @@
                 <ul class="nav" id="side-menu">
                     <li class="nav-header">
                         <div class="dropdown profile-element">
-                            <span><img alt="image" class="img-circle" src="__PUBLIC__/Admin/img/null.jpg"width="80"/></span>
+                            <span>
+                                <if condition="$Think.session.has_avatar eq 0">
+                                    <img alt="image" class="img-circle" src="__PUBLIC__/Admin/img/null.jpg"width="80"/>
+                                    <else/>
+                                    <img alt="image" class="img-circle" src="{$Think.session.avatar}"width="80"/>
+                                </if>
+                            </span>
                             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                                 <span class="clear">
                                <span class="block m-t-xs"><strong class="font-bold">{$Think.session.name}</strong></span>
@@ -17,7 +23,7 @@
                                 </span>
                             </a>
                             <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                                <li><a class="J_menuItem" href="form_avatar.html">修改头像</a>
+                                <li><a class="J_menuItem" href="{:U('Edit/avatar')}">修改头像</a>
                                 </li>
                                 <li><a class="J_menuItem" href="{:U('Edit/profile')}">个人资料</a>
                                 <li class="divider"></li>
@@ -33,6 +39,9 @@
                     </li>
                     <li>
                         <a class="J_menuItem" href="{:U('Blog/index')}"><i class="fa fa-columns"></i> <span class="nav-label">BLOG</span></a>
+                    </li>
+                    <li>
+                            <a class="J_menuItem" href="form_basic.html"><i class="fa fa-edit"></i> <span class="nav-label">表单</span></a>
                     </li>
                     <li>
                         <a class="J_menuItem" href="{:U('fresh')}"><i class="fa fa fa-bar-chart-o"></i> <span class="nav-label">统计图表</span></a>
