--- a/Application/Admin/View/Core/index.html
+++ b/Application/Admin/View/Core/index.html
@@ -80,11 +80,11 @@
 
                     <!--相册部分-->
                     <li>
-                        <a href="#"><i class="fa fa-picture-o"></i> <span class="nav-label">相册</span><span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-picture-o"></i> <span class="nav-label">相册管理</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
-                            <li><a class="J_menuItem" href="basic_gallery.html">基本图库</a>
+                            <li><a class="J_menuItem" href="{:U('Picture/index')}">相册</a>
                             </li>
-                            <li><a class="J_menuItem" href="carousel.html">图片切换</a>
+                            <li><a class="J_menuItem" href="carousel.html">TOP</a>
                             </li>
                             <li><a class="J_menuItem" href="blueimp.html">Blueimp相册</a>
                             </li>
