--- a/Application/Admin/View/Public/header.html
+++ b/Application/Admin/View/Public/header.html
@@ -27,4 +27,6 @@
     <link href="__PUBLIC__/Admin/css/plugins/dropzone/basic.css" rel="stylesheet">
     <link href="__PUBLIC__/Admin/css/plugins/dropzone/dropzone.css" rel="stylesheet">
     <link href="__PUBLIC__/Admin/umeditor/themes/default/css/umeditor.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="__PUBLIC__/Admin/uploadify/uploadify.css">
+    <link href="__PUBLIC__/Admin/js/plugins/fancybox/jquery.fancybox.css" rel="stylesheet">
     </head>
