--- a/Application/Admin/View/Public/js.html
+++ b/Application/Admin/View/Public/js.html
@@ -25,4 +25,6 @@
 <script type="text/javascript" charset="utf-8" src="__PUBLIC__/Admin/umeditor/umeditor.config.js"></script>
 <script type="text/javascript" charset="utf-8" src="__PUBLIC__/Admin/umeditor/umeditor.min.js"></script>
 <script type="text/javascript" src="__PUBLIC__/Admin/umeditor/lang/zh-cn/zh-cn.js"></script>
+<script src="__PUBLIC__/Admin/uploadify/jquery.uploadify.min.js" type="text/javascript"></script>
+<script src="__PUBLIC__/Admin/js/plugins/fancybox/jquery.fancybox.js"></script>
 
