--- a/Application/Admin/View/Wedding/edit.html
+++ b/Application/Admin/View/Wedding/edit.html
@@ -21,6 +21,17 @@
                                 </div>
                             </div>
                             <div class="hr-line-dashed"></div>
+                            <!--是否头条-->
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">是/否头条</label>
+                                <div class="col-sm-10">
+                                    <select class="form-control m-b" name="top">
+                                        <option value="0">否</option>
+                                        <option value="1" <if condition="$wedding['top'] eq 1 "> selected </if>>是</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="hr-line-dashed"></div>
                             <!--新人-->
                             <div class="form-group">
                                 <label class="col-sm-2 control-label">新娘</label>
