--- a/Application/Home/View/About/about.html
+++ b/Application/Home/View/About/about.html
@@ -1,9 +1,41 @@
-<include file="Public/header" title="关于"/>
+<include file="Public/header" title="我们"/>
+<body>
+<!-- Header Starts Here -->
+<div class="header page-hed" >
+	<div class="container">
+	<div class="logo  p-log">
+		<a href="/"><img src="__PUBLIC__/Home/images/logo.png"></a>
+	</div>
+	</div>
+</div>
+<div class="navigation">
+	<span class="menu"></span>
+	<ul class="navig">
+		<li><a href="/">首页</a></li>
+		<li><a href="{:U('About/about')}" class="active">我们</a></li>
+		<li><a href="gallery.html">画廊</a></li>
+		<li><a href="blog.html">永恒</a></li>
+		<li><a href="/Public/TOP" target="_blank">TOP</a></li>
+		<li><a href="contact.html">商店</a></li>
+		<li><a href="contact.html">蜜月计划</a></li>
+		<li><a href="contact.html">联系我们</a></li>
+		<li><a href="contact.html">联系我们</a></li>
+	</ul>
+	<script>
+		$( "span.menu" ).click(function() {
+		  $( "ul.navig" ).slideToggle( "slow", function() {
+		    // Animation complete.
+		  });
+		});
+	</script>
+</div>
+<!-- Header Ends Here -->
+<!-- Page Starts Here -->
 <div class="content">
 	<div class="container">
 			<div class="col-md-4 about-col">
 				<h3>Who We Are</h3>
-				<img src="__PUBLIC__/images/abt.jpg" alt="">
+				<img src="__PUBLIC__/Home/images/abt.jpg" alt="">
 				<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using '</p>
 				<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using '</p>
 			</div>
@@ -33,29 +65,29 @@
 			<div class="col-md-3 about-col">
 				<h3>opportunity</h3>
 				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use </p>
-				<img src="__PUBLIC__/images/abt1.jpg" alt="">
+				<img src="__PUBLIC__/Home/images/abt1.jpg" alt="">
 				<p>Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable</p>
 			</div>
 			<div class="clearfix"></div>
 			<div class="ideas">
 				<h3>Fresh Ideas</h3>
 				<div class="col-md-3 ideas-col">
-					<img src="__PUBLIC__/images/pic3.jpg" alt="">
+					<img src="__PUBLIC__/Home/images/pic3.jpg" alt="">
 					<h3>Donec finibus et liberovel imperdiet.</h3>
 					<p>Pellentesque sed rutrum ante. Morbi dignissim ut urna eu luctus. </p>
 				</div>
 				<div class="col-md-3 ideas-col">
-					<img src="__PUBLIC__/images/pic2.jpg" alt="">
+					<img src="__PUBLIC__/Home/images/pic2.jpg" alt="">
 					<h3>Donec finibus et liberovel imperdiet.</h3>
 					<p>Pellentesque sed rutrum ante. Morbi dignissim ut urna eu luctus. </p>
 				</div>
 				<div class="col-md-3 ideas-col">
-					<img src="__PUBLIC__/images/pic5.jpg" alt="">
+					<img src="__PUBLIC__/Home/images/pic5.jpg" alt="">
 					<h3>Donec finibus et liberovel imperdiet.</h3>
 					<p>Pellentesque sed rutrum ante. Morbi dignissim ut urna eu luctus. </p>
 				</div>
 				<div class="col-md-3 ideas-col">
-					<img src="__PUBLIC__/images/pic4.jpg" alt="">
+					<img src="__PUBLIC__/Home/images/pic4.jpg" alt="">
 					<h3>Donec finibus et liberovel imperdiet.</h3>
 					<p>Pellentesque sed rutrum ante. Morbi dignissim ut urna eu luctus. </p>
 				</div>
@@ -63,8 +95,6 @@
 			</div>
 	</div>
 </div>
-<!-- Page Ends Here -->
-<!-- Footer Part Starts Here -->
 <include file="Public/footer"/>
 </body>
 </html>
