--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -1,185 +1,104 @@
 <include file="Public/header" title="首页"/>
+<body>
+<!-- Header Starts Here -->
+<div class="header">
+	<div class="container">
+		<div class="logo">
+			<a href="/"><img src="__PUBLIC__/Home/images/logo.png"></a>
+		</div>
+	</div>
+</div>
+<div class="navigation">
+	<span class="menu"></span>
+	<ul class="navig">
+		<li><a href="/" class="active">首页</a></li>
+		<li><a href="{:U('About/about')}">我们</a></li>
+		<li><a href="gallery.html">画廊</a></li>
+		<li><a href="blog.html">永恒</a></li>
+		<li><a href="/Public/TOP" target="_blank">TOP</a></li>
+		<li><a href="contact.html">商店</a></li>
+		<li><a href="contact.html">蜜月计划</a></li>
+		<li><a href="contact.html">联系我们</a></li>
+		<li><a href="contact.html">联系我们</a></li>
+	</ul>
+	<script>
+		$( "span.menu" ).click(function() {
+			$( "ul.navig" ).slideToggle( "slow", function() {
+				// Animation complete.
+			});
+		});
+	</script>
+</div>
 <div class="content">
 	<div class="container">
 		<div class="col-md-6 content-col">
-			<img src="__PUBLIC__/Home/images/pic1.jpg" alt="">
+			<img src="{$wedding.file_path}" alt="最美新人" width="570" height="300">
 		</div>
 		<div class="col-md-6 content-col col_2">
-			<h2>Welcome</h2>
-			<p>There are many variations of passages of Lorem Ipsum available.</p>
-			<p>Nunc mattis elementum massa, elementum volutpat dolor vestibulum sit amet. Mauris a eros id est dictum pretium sed vitae nisl. Donec porta eleifend nibh, a faucibus mi euismod vel.</p>
+			<h2>最美殿堂</h2>
+			<p>{$wedding.bride} & {$wedding.bridegroom}</p>
+			<p>{$wedding.info|mb_substr=0,100}</p>
 		</div>
 		<div class="clearfix"></div>
-				<div class="ideas">
-			<h3>Fresh Ideas</h3>
-			<div class="col-md-3 ideas-col">
-				<img src="__PUBLIC__/Home/images/pic3.jpg" alt="">
-				<h3>Donec finibus et liberovel imperdiet.</h3>
-				<p>Pellentesque sed rutrum ante. Morbi dignissim ut urna eu luctus. </p>
-			</div>
-			<div class="col-md-3 ideas-col">
-				<img src="__PUBLIC__/Home/images/pic2.jpg" alt="">
-				<h3>Donec finibus et liberovel imperdiet.</h3>
-				<p>Pellentesque sed rutrum ante. Morbi dignissim ut urna eu luctus. </p>
-			</div>
-			<div class="col-md-3 ideas-col">
-				<img src="__PUBLIC__/Home/images/pic5.jpg" alt="">
-				<h3>Donec finibus et liberovel imperdiet.</h3>
-				<p>Pellentesque sed rutrum ante. Morbi dignissim ut urna eu luctus. </p>
-			</div>
-			<div class="col-md-3 ideas-col">
-				<img src="__PUBLIC__/Home/images/pic4.jpg" alt="">
-				<h3>Donec finibus et liberovel imperdiet.</h3>
-				<p>Pellentesque sed rutrum ante. Morbi dignissim ut urna eu luctus. </p>
-			</div>
+		<div class="ideas">
+			<h3>最新照片</h3>
+			<volist name="photo" id="vol">
+				<div class="col-md-3 ideas-col">
+					<img src="{$vol.file_path}" title="婚礼地址:{$vol.address_name}" width="260" height="160">
+					<h3>{$vol.bride} & {$vol.bridegroom}</h3>
+					<p style="color: grey;font-size: 12px;">婚礼地址:{$vol.address_name}</p>
+					<p>{$vol.info|mb_substr=0,20}...</p>
+				</div>
+			</volist>
 			<div class="clearfix"></div>
 		</div>
 		<div class="events">
 			<div class="col-md-7 events-col">
 				<div id="ca-container" class="ca-container">
 				    <div class="ca-wrapper">
-				         <div class="ca-item ca-item-1">
+						<div class="ca-item ca-item">
 						   <div class="ca-item-main">
-								<div class="ca-icon">
+								<div class="ca-icon" style="background: url(__PUBLIC__/Home/images/pic12.jpg);">
 									<div class="caption">
 										<p>Shan & Mary<br>Wedding<br>Jun.02.2014</p>
 									</div> 
 								</div>
-								<div class="ca-icon1">
+								<div class="ca-icon" style="background: url(__PUBLIC__/Home/images/pic11.jpg);">
 									<div class="caption">
 										<p>Shan & Mary<br>Wedding<br>Jun.02.2014</p>
-									</div> 
-								 </div>
-							</div>
-						  </div>
-						<div class="ca-item ca-item-2">
-							<div class="ca-item-main">
-								<div class="ca-icon">
-									<div class="caption">
-										<p>Shan & Mary<br>Wedding<br>Jun.02.2014</p>
-									</div>  
+									</div>
 								</div>
-								<div class="ca-icon2">
-									<div class="caption">
-										<p>Shan & Mary<br>Wedding<br>Jun.02.2014</p>
-									</div> 
-								 </div>
-							</div>
+						   </div>
 						</div>
-						<div class="ca-item ca-item-3">
-							<div class="ca-item-main">
-								<div class="ca-icon">
-									<div class="caption">
-										<p>Shan & Mary<br>Wedding<br>Jun.02.2014</p>
-									</div> 
-								 </div>
-								<div class="ca-icon3">
-									<div class="caption">
-										<p>Shan & Mary<br>Wedding<br>Jun.02.2014</p>
-									</div> 
-								 </div>
-							</div>
-						</div>
-						<div class="ca-item ca-item-4">
-							<div class="ca-item-main">
-								<div class="ca-icon"> 
-									<div class="caption">
-										<p>Shan & Mary<br>Wedding<br>Jun.02.2014</p>
-									</div> 	
-								</div>
-								<div class="ca-icon4">
-									<div class="caption">
-										<p>Shan & Mary<br>Wedding<br>Jun.02.2014</p>
-									</div> 
-							  	</div>
-						     </div>
-						</div>
-						<div class="ca-item ca-item-5">
-							<div class="ca-item-main">
-								<div class="ca-icon">
-									<div class="caption">
-										<p>Shan & Mary<br>Wedding<br>Jun.02.2014</p>
-									</div> 
-								 </div>
-								<div class="ca-icon5">
-									<div class="caption">
-										<p>Shan & Mary<br>Wedding<br>Jun.02.2014</p>
-									</div> 
-								 </div>
-							</div>
-						</div>
-						<div class="ca-item ca-item-6">
-							<div class="ca-item-main">
-								<div class="ca-icon">
-									<div class="caption">
-										<p>Shan & Mary<br>Wedding<br>Jun.02.2014</p>
-									</div>  
-								</div>
-								<div class="ca-icon6">
-									<div class="caption">
-										<p>Shan & Mary<br>Wedding<br>Jun.02.2014</p>
-									</div>  
-								</div>
-							</div>
-						</div>
-						<div class="ca-item ca-item-7">
-							<div class="ca-item-main">
-								<div class="ca-icon">
-									<div class="caption">
-										<p>Shan & Mary<br>Wedding<br>Jun.02.2014</p>
-									</div>  
-								</div>
-								<div class="ca-icon7">
-									<div class="caption">
-										<p>Shan & Mary<br>Wedding<br>Jun.02.2014</p>
-									</div> 
-								 </div>
-							</div>
-						</div>
-						<div class="ca-item ca-item-8">
-							<div class="ca-item-main">
-								<div class="ca-icon">
-									<div class="caption">
-										<p>Shan & Mary<br>Wedding<br>Jun.02.2014</p>
-									</div>  
-								</div>
-								<div class="ca-icon">
-									<div class="caption">
-										<p>Shan & Mary<br>Wedding<br>Jun.02.2014</p>
-									</div>  
-								</div>
-							</div>
-						</div>
-			    </div>
+					</div>
 					<script type="text/javascript">
-			$('#ca-container').contentcarousel();
-		</script>
+						$('#ca-container').contentcarousel();
+					</script>
+				</div>
 			</div>
-		</div>
-		<div class="col-md-5 events-col">
-			<h3>Latest Events</h3>
-			<h4>28.08.2014</h4>
-			<p>Cras vel risus sodales tellus blandit porttitor vitae vitae mauris. Etiam rhoncus ultricies dolor facilisis porta. </p>
-			<h4>28.08.2014</h4>
-			<p>Cras vel risus sodales tellus blandit porttitor vitae vitae mauris. Etiam rhoncus ultricies dolor facilisis porta. </p>
-			<h3>News Letter</h3>
-			<p>Etiam sit amet ipsum orci. Lorem ipsum dolor sit  amet, consectetur adipiscing elit. Etiam sed arcu ut mi accumsan fringilla. </p>
-			<span class="subscribe">
-				<input type="text" placeholder="Enter your email..." required=""/>
-				<input type="submit" value="Go" />
-			</span>
-			<h3>Follow Us</h3>
-			<ul class="social">
-				<li><a href="#"><i class="fa"></i></a></li>
-				<li><a href="#"><i class="fb"></i></a></li>
-				<li><a href="#"><i class="fc"></i></a></li>
-			</ul>
-		</div>
-		<div class="clearfix"></div>
+			<div class="col-md-5 events-col">
+				<h3>Latest Events</h3>
+				<h4>28.08.2014</h4>
+				<p>Cras vel risus sodales tellus blandit porttitor vitae vitae mauris. Etiam rhoncus ultricies dolor facilisis porta. </p>
+				<h4>28.08.2014</h4>
+				<p>Cras vel risus sodales tellus blandit porttitor vitae vitae mauris. Etiam rhoncus ultricies dolor facilisis porta. </p>
+				<h3>News Letter</h3>
+				<p>Etiam sit amet ipsum orci. Lorem ipsum dolor sit  amet, consectetur adipiscing elit. Etiam sed arcu ut mi accumsan fringilla. </p>
+				<span class="subscribe">
+					<input type="text" placeholder="Enter your email..." required=""/>
+					<input type="submit" value="Go" />
+				</span>
+				<h3>Follow Us</h3>
+				<ul class="social">
+					<li><a href="#"><i class="fa"></i></a></li>
+					<li><a href="#"><i class="fb"></i></a></li>
+					<li><a href="#"><i class="fc"></i></a></li>
+				</ul>
+			</div>
+			<div class="clearfix"></div>
 		</div>
 	</div>
 </div>
-<!-- Content Part Ends Here -->
 <include file="Public/footer"/>
 </body>
 </html>
