--- a/Application/Home/View/Public/footer.html
+++ b/Application/Home/View/Public/footer.html
@@ -1,5 +1,5 @@
 <div class="footer">
     <div class="container">
-        <p>Copyright &copy; 2016 WEDDING文化股份有限公司 <a href="http://www.weeding.com/">www.weeding.com</a> | 京ICP备12012010号-1  公安备案号：京公网安备1010101407号</p>
+        <p>Copyright &copy; 2016 WEDDING文化股份有限公司 <a href="http://www.wedding.com/">www.wedding.com</a> | 京ICP备12012010号-1  公安备案号：京公网安备1010101407号</p>
     </div>
 </div>
