--- a/Public/Home/css/style.css
+++ b/Public/Home/css/style.css
@@ -174,101 +174,9 @@ ul.navig li a:hover{
 	display: block;
 	position: relative;
 	margin: 0 auto;
-	background: transparent url(../images/pic12.jpg) no-repeat center center;
+	background: transparent no-repeat center center;
+	/*background: transparent url(../images/pic12.jpg) no-repeat center center;*/
 	margin-bottom: 5px;
-}
-.ca-icon1{
-	width:100%;
-	height: 300px;
-	display: block;
-	position: relative;
-	margin: 0 auto;
-	background: transparent url(../images/pic11.jpg) no-repeat center center;
-	margin-bottom: 5px;
-}
-.ca-icon2{
-	width:100%;
-	height: 300px;
-	display: block;
-	position: relative;
-	margin: 0 auto;
-	background: transparent url(../images/pic10.jpg) no-repeat center center;
-	margin-bottom: 5px;
-}
-.ca-icon3{
-	width:100%;
-	height: 300px;
-	display: block;
-	position: relative;
-	margin: 0 auto;
-	background: transparent url(../images/pic14.jpg) no-repeat center center;
-	margin-bottom: 5px;
-}
-.ca-icon4{
-	width:100%;
-	height: 300px;
-	display: block;
-	position: relative;
-	margin: 0 auto;
-	background: transparent url(../images/pic15.jpg) no-repeat center center;
-	margin-bottom: 5px;
-}
-.ca-icon5{
-	width:100%;
-	height: 300px;
-	display: block;
-	position: relative;
-	margin: 0 auto;
-	background: transparent url(../images/pic16.jpg) no-repeat center center;
-	margin-bottom: 5px;
-}
-.ca-icon6{
-	width:100%;
-	height: 300px;
-	display: block;
-	position: relative;
-	margin: 0 auto;
-	background: transparent url(../images/pic17.jpg) no-repeat center center;
-	margin-bottom: 5px;
-}
-.ca-icon7{
-	width:100%;
-	height: 300px;
-	display: block;
-	position: relative;
-	margin: 0 auto;
-	background: transparent url(../images/pic17.jpg) no-repeat center center;
-	margin-bottom: 5px;
-}
-.ca-item-2 .ca-icon{
-	background-image:url(../images/pic10.jpg);
-}
-.ca-item-2 .ca-icon1{
-	background-image:url(../images/pic1.jpg);
-}
-.ca-item-2 .ca-icon2{
-	background-image:url(../images/pic13.jpg);
-}
-.ca-item-2 .ca-icon3{
-	background-image:url(../images/pic10.jpg);
-}
-.ca-item-2 .ca-icon4{
-	background-image:url(../images/pic13.jpg);
-}
-.ca-item-2 .ca-icon5{
-	background-image:url(../images/pic12.jpg);
-}
-.ca-item-2 .ca-icon6{
-	background-image:url(../images/pic11.jpg);
-}
-.ca-item-2 .ca-icon7{
-	background-image:url(../images/pic15.jpg);
-}
-.ca-item-3 .ca-icon{
-	background-image:url(../images/pic15.jpg);
-}
-.ca-item-4 .ca-icon{
-	background-image:url(../images/pic9.jpg);
 }
 .ca-content-wrapper{
 	background:ghostwhite;
