update index of frontend

--- a/Application/Admin/View/Core/index.html
+++ b/Application/Admin/View/Core/index.html
@@ -41,7 +41,7 @@
                         <a class="J_menuItem" href="{:U('Blog/index')}"><i class="fa fa-columns"></i> <span class="nav-label">BLOG</span></a>
                     </li>
                     <li>
-                        <a class="J_menuItem" href="{:U('fresh')}"><i class="fa fa fa-bar-chart-o"></i> <span class="nav-label">统计图表</span></a>
+                        <a class="J_menuItem" href="{:U('Ourhistory/index')}"><i class="fa fa fa-bar-chart-o"></i> <span class="nav-label">公司文化</span></a>
                     </li>
                     {/*管理*/}
                     <li>
