--- a/Application/Admin/View/Picture/index.html
+++ b/Application/Admin/View/Picture/index.html
@@ -9,9 +9,9 @@
                         <div class="col-sm-4">
                             <div class="text-center">
                                 <if condition="$vol.count eq 0 ">
-                                    <img alt="image" class="img-circle m-t-xs img-responsive" src="__PUBLIC__/Admin/img/null.jpg">
+                                    <img alt="image" class="img-circle m-t-xs img-responsive" src="__PUBLIC__/Admin/img/null.jpg"  style="width: 138px;height: 136px;">
                                     <else/>
-                                <img alt="image" class="img-circle m-t-xs img-responsive" src="{$vol.photo}">
+                                <img alt="image" class="img-circle m-t-xs img-responsive" src="{$vol.photo}" style="width: 138px;height: 136px;">
                                 </if>
                                 <div class="m-t-xs font-bold">     </div>
                             </div>
