--- a/Application/Home/View/About/about.html
+++ b/Application/Home/View/About/about.html
@@ -13,8 +13,8 @@
 	<ul class="navig">
 		<li><a href="/">首页</a></li>
 		<li><a href="{:U('About/about')}" class="active">我们</a></li>
-		<li><a href="gallery.html">画廊</a></li>
-		<li><a href="blog.html">永恒</a></li>
+		<li><a href="{:U('Index/gallery')}">画廊</a></li>
+		<li><a href="{:U('Index/blog')}">永恒</a></li>
 		<li><a href="/Public/TOP" target="_blank">TOP</a></li>
 		<li><a href="contact.html">商店</a></li>
 		<li><a href="contact.html">蜜月计划</a></li>
@@ -34,13 +34,13 @@
 <div class="content">
 	<div class="container">
 			<div class="col-md-4 about-col">
-				<h3>Who We Are</h3>
+				<h3>我们的文化</h3>
 				<img src="__PUBLIC__/Home/images/abt.jpg" alt="">
 				<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using '</p>
 				<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using '</p>
 			</div>
 			<div class="col-md-5 about-col">
-				<h3>Our History</h3>
+				<h3>成长&幸福的记录</h3>
 				<ul class="history">
 					<li><span>2004</span>
 						<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using </p>
@@ -63,14 +63,14 @@
 				</ul>
 			</div>
 			<div class="col-md-3 about-col">
-				<h3>opportunity</h3>
+				<h3>我们的宗旨</h3>
 				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use </p>
 				<img src="__PUBLIC__/Home/images/abt1.jpg" alt="">
 				<p>Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable</p>
 			</div>
 			<div class="clearfix"></div>
 			<div class="ideas">
-				<h3>Fresh Ideas</h3>
+				<h2>名人榜</h2>
 				<div class="col-md-3 ideas-col">
 					<img src="__PUBLIC__/Home/images/pic3.jpg" alt="">
 					<h3>Donec finibus et liberovel imperdiet.</h3>
