--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -13,8 +13,8 @@
 	<ul class="navig">
 		<li><a href="/" class="active">首页</a></li>
 		<li><a href="{:U('About/about')}">我们</a></li>
-		<li><a href="gallery.html">画廊</a></li>
-		<li><a href="blog.html">永恒</a></li>
+		<li><a href="{:U('Index/gallery')}">画廊</a></li>
+		<li><a href="{:U('Index/blog')}">永恒</a></li>
 		<li><a href="/Public/TOP" target="_blank">TOP</a></li>
 		<li><a href="contact.html">商店</a></li>
 		<li><a href="contact.html">蜜月计划</a></li>
@@ -42,7 +42,7 @@
 		<div class="clearfix"></div>
 		<div class="ideas">
 			<h3>最新照片</h3>
-			<volist name="photo" id="vol">
+			<volist name="photo" id="vol" offset="0" length="4">
 				<div class="col-md-3 ideas-col">
 					<img src="{$vol.file_path}" title="婚礼地址:{$vol.address_name}" width="260" height="160">
 					<h3>{$vol.bride} & {$vol.bridegroom}</h3>
@@ -55,50 +55,54 @@
 		<div class="events">
 			<div class="col-md-7 events-col">
 				<div id="ca-container" class="ca-container">
-				    <div class="ca-wrapper">
-						<div class="ca-item ca-item">
-						   <div class="ca-item-main">
-								<div class="ca-icon" style="background: url(__PUBLIC__/Home/images/pic12.jpg);">
-									<div class="caption">
-										<p>Shan & Mary<br>Wedding<br>Jun.02.2014</p>
-									</div> 
-								</div>
-								<div class="ca-icon" style="background: url(__PUBLIC__/Home/images/pic11.jpg);">
-									<div class="caption">
-										<p>Shan & Mary<br>Wedding<br>Jun.02.2014</p>
-									</div>
-								</div>
-						   </div>
-						</div>
+				    <div class="ca-wrapper" id="wedding_photo">
 					</div>
-					<script type="text/javascript">
-						$('#ca-container').contentcarousel();
-					</script>
 				</div>
 			</div>
 			<div class="col-md-5 events-col">
-				<h3>Latest Events</h3>
-				<h4>28.08.2014</h4>
-				<p>Cras vel risus sodales tellus blandit porttitor vitae vitae mauris. Etiam rhoncus ultricies dolor facilisis porta. </p>
-				<h4>28.08.2014</h4>
-				<p>Cras vel risus sodales tellus blandit porttitor vitae vitae mauris. Etiam rhoncus ultricies dolor facilisis porta. </p>
-				<h3>News Letter</h3>
-				<p>Etiam sit amet ipsum orci. Lorem ipsum dolor sit  amet, consectetur adipiscing elit. Etiam sed arcu ut mi accumsan fringilla. </p>
-				<span class="subscribe">
+				<h3>最新活动</h3>
+				<h4>2014年8月28日</h4>
+				<p>信用评级机构VEL risus sodales得力士blandit porttitor简历简历mauris。Etiam rhoncus ultricies悲facilisis PORTA。</p>
+				<h4>2014年8月28日</h4>
+				<p>信用评级机构VEL risus sodales得力士blandit porttitor简历简历mauris。Etiam rhoncus ultricies悲facilisis PORTA。</p>
+				<h3>快讯</h3>
+				<p>Etiam坐阿梅德存有奥奇。Lorem存有悲坐阿梅德，consectetur adipiscing ELIT。Etiam SED arcu UT英里accumsan燕雀。</p>
+<!--				<span class="subscribe">
 					<input type="text" placeholder="Enter your email..." required=""/>
 					<input type="submit" value="Go" />
 				</span>
-				<h3>Follow Us</h3>
-				<ul class="social">
+				<h3>Follow Us</h3>-->
+<!--				<ul class="social">
 					<li><a href="#"><i class="fa"></i></a></li>
 					<li><a href="#"><i class="fb"></i></a></li>
 					<li><a href="#"><i class="fc"></i></a></li>
-				</ul>
+				</ul>-->
 			</div>
 			<div class="clearfix"></div>
 		</div>
 	</div>
 </div>
 <include file="Public/footer"/>
+<script>
+	var photo = {$list};
+	var len = photo.length;
+	var content = '';
+	for (var i = 1; i <= len; ++i) {
+		var dater = parseInt(photo[i - 1].wedding_date) * 1000;
+		var timer = new Date(dater).toLocaleString();
+		var j = i-1;
+		if (i % 2 != 0) {
+			content += "<div class='ca-item ca-item-" +i+ "'> <div class='ca-item-main'>";
+			content += "<div class='ca-icon' style='background: transparent  url(" +photo[j].file_path+ ") no-repeat center center;background-size: 100% 100%;'><div class='caption'>";
+			content += "<p>" +photo[j].bride+ " & " +photo[j].bridegroom+ "<br>举行婚礼<br>" +timer+ "</p></div></div>";
+		} else {
+			content += "<div class='ca-icon' style='background: transparent  url(" +photo[j].file_path+ ") no-repeat center center;background-size: 100% 100%;'><div class='caption'>";
+			content += "<p>" +photo[j].bride+ " & " +photo[j].bridegroom+ "<br>举行婚礼<br>" +timer+ "</p></div></div>";
+			content +="</div></div>";
+		}
+	}
+	$('#wedding_photo').html(content);
+	$('#ca-container').contentcarousel();
+</script>
 </body>
 </html>
