--- a/Application/Home/View/Public/header.html
+++ b/Application/Home/View/Public/header.html
@@ -11,4 +11,5 @@
     <script type="text/javascript" src="__PUBLIC__/Home/js/jquery.mousewheel.js"></script>
     <script type="text/javascript" src="__PUBLIC__/Home/js/jquery.contentcarousel.js"></script>
     <script src="__PUBLIC__/Home/js/easing.js"></script>
+    <link href="__PUBLIC__/Admin/js/plugins/fancybox/jquery.fancybox.css" rel="stylesheet">
 </head>
