--- a/Application/Admin/View/Picture/pictures.html
+++ b/Application/Admin/View/Picture/pictures.html
@@ -1,4 +1,4 @@
-<include file="Public/header" title="相册"/>
+<include file="Public/header" title="{$wedding.bride} AND {$wedding.bridegroom}"/>
 <body class="gray-bg">
     <div class="wrapper wrapper-content">
         <div class="row">
@@ -21,9 +21,12 @@
                              <form method="post" class="form-horizontal" enctype="multipart/form-data" action="{:U('upload')}">
                                 <div class="hr-line-dashed"></div>
                                 <div class="form-group">
-                                    <div class="col-sm-10">
+                                    <div class="col-sm-1">
                                         <div id="queue"></div>
                                         <input id="file_upload" name="file_upload" type="file" multiple="true">
+                                    </div>
+                                    <div class="col-sm-1">
+                                        <input type="button" value="图片管理" class="btn-rounded" style="width: 120px;height:32px;font-weight: bold;" onclick="location.href='__CONTROLLER__/'">
                                     </div>
                                 </div>
                                 <div class="hr-line-dashed"></div>
@@ -41,7 +44,7 @@
                 var len = photo.length;
                 var img = '';
                 for (var i = 0; i < len; ++i) {
-                    img += "<a class='fancybox' href='"+photo[i].file_path+"'><img alt='image' src='"+photo[i].file_path+"' /></a>&emsp;";
+                    img += "<a class='fancybox' href='"+photo[i].file_path+"'><img alt='image' src='"+photo[i].file_path+"' style='width: 388px;height: 220px;'/></a>&emsp;";
                 }
                 $('#img').html(img);
             }
@@ -52,7 +55,7 @@
                     'token'     : "{$token}"
                 },
                 'swf'      : '__PUBLIC__/Admin/uploadify/uploadify.swf',
-                'uploader' : '__CONTROLLER__/upload',
+                'uploader' : '__CONTROLLER__/upload'
             });
         });
         //图片显示
