--- a/Application/Admin/View/Wedding/add.html
+++ b/Application/Admin/View/Wedding/add.html
@@ -18,6 +18,17 @@
                                 </div>
                             </div>
                             <div class="hr-line-dashed"></div>
+                            <!--是否头条-->
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">是/否头条</label>
+                                <div class="col-sm-10">
+                                    <select class="form-control m-b" name="top">
+                                        <option value="0">否</option>
+                                        <option value="1">是</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="hr-line-dashed"></div>
                             <!--新人-->
                             <div class="form-group">
                                 <label class="col-sm-2 control-label">新娘</label>
@@ -38,7 +49,6 @@
                                 <label class="col-sm-2 control-label">新娘信息</label>
                                 <div class="col-sm-10">
                                     <textarea class="form-control" name="bride_info" maxlength="100"></textarea>
-                                  <!--  <input type="text" class="form-control" name="bride_info" maxlength="100">-->
                                 </div>
                             </div>
                             <div class="hr-line-dashed"></div>
@@ -90,6 +100,7 @@
         </div>
     </div>
     <include file="Public/js"/>
+    <script src="__PUBLIC__/Admin/js/plugins/layer/laydate/laydate.js"></script>
     <script>
         laydate({elem:"#hello",event:"focus"});var start={elem:"#start",format:"YYYY/MM/DD hh:mm:ss",min:laydate.now(),max:"2099-06-16 23:59:59",istime:true,istoday:false,choose:function(datas){end.min=datas;end.start=datas}};var end={elem:"#end",format:"YYYY/MM/DD hh:mm:ss",min:laydate.now(),max:"2099-06-16 23:59:59",istime:true,istoday:false,choose:function(datas){start.max=datas}};laydate(start);laydate(end);
     </script>
