--- a/Application/Home/View/About/contact.html
+++ b/Application/Home/View/About/contact.html
@@ -13,8 +13,8 @@
 	<ul class="navig">
 		<li><a href="/">首页</a></li>
 		<li><a href="{:U('About/about')}">我们</a></li>
-		<li><a href="gallery.html">画廊</a></li>
-		<li><a href="blog.html">永恒</a></li>
+		<li><a href="{:U('Index/gallery')}">画廊</a></li>
+		<li><a href="{:U('Index/blog)}">永恒</a></li>
 		<li><a href="/Public/TOP" target="_blank">TOP</a></li>
 		<li><a href="contact.html">商店</a></li>
 		<li><a href="contact.html">蜜月计划</a></li>
