--- a/Application/Home/View/About/single.html
+++ b/Application/Home/View/About/single.html
@@ -11,10 +11,10 @@
 <div class="navigation">
 	<span class="menu"></span>
 	<ul class="navig">
-		<li><a href="/" class="active">首页</a></li>
+		<li><a href="/">首页</a></li>
 		<li><a href="{:U('About/about')}">我们</a></li>
-		<li><a href="gallery.html">画廊</a></li>
-		<li><a href="blog.html">永恒</a></li>
+		<li><a href="{:U('Index/gallery')}">画廊</a></li>
+		<li><a href="{:U('Index/blog')}" class="active">永恒</a></li>
 		<li><a href="/Public/TOP" target="_blank">TOP</a></li>
 		<li><a href="contact.html">商店</a></li>
 		<li><a href="contact.html">蜜月计划</a></li>
@@ -29,58 +29,22 @@
 		});
 	</script>
 </div>
-<!-- Header Ends Here -->
 <!-- Page Starts Here -->
 <div class="content">
 	<div class="container">
 		<div class="gallery">
-			<h3>Recent Blogs</h3>
-			<div class="blog-sidebar">
-				<h4>Catgeories</h4>
-				<ul class="cat-list">
-					<li><a href="#">Cras ut ultrices</a></li>
-					<li><a href="#">Nullam id enim</a></li>
-					<li><a href="#">scelerisque enim</a></li>
-					<li><a href="#">Ut tincidunt</a></li>
-					<li><a href="#">Aliquam mauris nunc,</a></li>
-					<li><a href="#">convallis ex urna, ege</a></li>
-					<li><a href="#"> et commodo</a></li>
-				</ul>
-				<h4>Recent Post</h4>
-				<ul class="cat-list">
-					<li><a href="#"><img src="__PUBLIC__/Home/images/bl.jpg" alt="" />&nbsp;&nbsp;ut ultrices</a></li>
-					<li><a href="#"><img src="__PUBLIC__/Home/images/bl2.jpg" alt="" />&nbsp;&nbsp;Nullam id</a></li>
-					<li><a href="#"><img src="__PUBLIC__/Home/images/bl3.jpg" alt="" />&nbsp;&nbsp;scelerisque</a></li>
-					<li><a href="#"><img src="__PUBLIC__/Home/images/bl4.jpg" alt="" />&nbsp;&nbsp;Ut tincidunt</a></li>
-					<li><a href="#"><img src="__PUBLIC__/Home/images/bl.jpg" alt="" />&nbsp;&nbsp;Aliquam nc,</a></li>
-					<li><a href="#"><img src="__PUBLIC__/Home/images/bl4.jpg" alt="" />&nbsp;&nbsp;convalli ege</a></li>
-					<li><a href="#"> <img src="__PUBLIC__/Home/images/bl3.jpg" alt="" />&nbsp;&nbsp;et commodo</a></li>
-				</ul>
-			</div>
+			<h3>最近大事记</h3>
+			<include file="Public/sidebar"/>
 			<div class="blog-content">
-				<div class="blog-post">
-					<h4>volutpat diam non, condimentum neque. Lorem ipsum dolor sit </h4>
+				<div class="blog-post"  style="background-color: #FCFCFC;padding:0 30px 0;">
+					<p>&nbsp;</p>
+					<h4>{$article.title}</h4>
 					<div class="post-details">
-						<p>Posted By <a href="#">Jackie</a> &nbsp;&nbsp; On <span>15 jan, 2015</span> &nbsp;&nbsp; Comments<span>(10)</span></p>
+						<p>发布者：<a href="#">{$article.name}</a> &nbsp;&nbsp;发布时间：<span>{$article.send_date|date='Y/m/d H:i:s', ###}</span> &nbsp;&nbsp;地址：<span>{$article.address_name}</span></p>
 					</div>
-					<img src="__PUBLIC__/Home/images/blog2.jpg" alt="" />
-					<p>Nunc laoreet leo in pellentesque venenatis. Mauris id porttitor mauris. Integer malesuada nulla sit amet elit maximus congue. Etiam nibh lorem,</p>
-					<p>volutpat nec velit ut, congue scelerisque tortor. Ut tincidunt malesuada tellus, eget ullamcorper mi. Phasellus et nisi nec lorem molestie fermentum nec eu dolor. Aenean suscipit posuere metus vel ultrices. Donec laoreet diam consequat libero pretium pulvinar.</p>
-					<p>volutpat nec velit ut, congue scelerisque tortor. Ut tincidunt malesuada tellus, eget ullamcorper mi. Phasellus et nisi nec lorem molestie fermentum nec eu dolor. Aenean suscipit posuere metus vel ultrices. Donec laoreet diam consequat libero pretium pulvinar.volutpat nec velit ut, congue scelerisque tortor. Ut tincidunt malesuada tellus, eget ullamcorper mi. Phasellus et nisi nec lorem molestie fermentum nec eu dolor. Aenean suscipit posuere metus vel ultrices. Donec laoreet diam consequat libero pretium pulvinar.volutpat nec velit ut, congue scelerisque tortor. Ut tincidunt malesuada tellus, eget ullamcorper mi. Phasellus et nisi nec lorem molestie fermentum nec eu dolor. Aenean suscipit posuere metus vel ultrices. Donec laoreet diam consequat libero pretium pulvinar.</p>
-					<p>volutpat nec velit ut, congue scelerisque tortor. Ut tincidunt malesuada tellus, eget ullamcorper mi. Phasellus et nisi nec lorem molestie fermentum nec eu dolor. Aenean suscipit posuere metus vel ultrices. Donec laoreet diam consequat libero pretium pulvinar.</p>
-					<div class="comment-box">
-						<h3>Leave your Opinion </h3>
-						<div class="text-cmt">
-							<input type="text" placeholder="Name" required="">
-							<input type="text" placeholder="Email" required="">
-						</div>
-						<div class="text-cmt">
-							<textarea placeholder="Message" required=""></textarea>
-						</div>
-						<div class="text-cmt">
-							<input type="submit">
-						</div>
-					</div>
+					<p>{$article.synopsis}</p>
+					{$article.content}
+					<p>&nbsp;</p><p>&nbsp;</p>
 				</div>
 			</div>
 			<div class="clearfix"></div>
