--- a/Public/Home/css/style.css
+++ b/Public/Home/css/style.css
@@ -174,7 +174,6 @@ ul.navig li a:hover{
 	display: block;
 	position: relative;
 	margin: 0 auto;
-	background: transparent no-repeat center center;
 	/*background: transparent url(../images/pic12.jpg) no-repeat center center;*/
 	margin-bottom: 5px;
 }
@@ -451,7 +450,7 @@ ul.history li p{
    -moz-box-shadow: 1px 1px 2px #e6e6e6;
    box-shadow: 1px 1px 2px #e6e6e6;
    cursor: default;
-   background: #fff url(../images/bgimg.jpg) no-repeat center center;
+  /* background: #fff url(../images/bgimg.jpg) no-repeat center center;*/
 }
 .view .mask,.view .content {
    width: 264px;
