--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -12,14 +12,13 @@
 	<span class="menu"></span>
 	<ul class="navig">
 		<li><a href="/" class="active">首页</a></li>
-		<li><a href="{:U('About/about')}">我们</a></li>
+		<li><a href="{:U('Our/about')}">我们</a></li>
 		<li><a href="{:U('Index/gallery')}">画廊</a></li>
 		<li><a href="{:U('Index/blog')}">永恒</a></li>
 		<li><a href="/Public/TOP" target="_blank">TOP</a></li>
-		<li><a href="contact.html">商店</a></li>
-		<li><a href="contact.html">蜜月计划</a></li>
-		<li><a href="contact.html">联系我们</a></li>
-		<li><a href="contact.html">联系我们</a></li>
+		<li><a href="javascript:;">商店</a></li>
+		<li><a href="javascript:;">蜜月计划</a></li>
+		<li><a href="{:U('Our/our')}">联系我们</a></li>
 	</ul>
 	<script>
 		$( "span.menu" ).click(function() {
