--- a/Application/Home/View/Our/our.html
+++ b/Application/Home/View/Our/our.html
@@ -1,6 +1,5 @@
 <include file="Public/header" title="联系我们"/>
 <body>
-<!-- Header Starts Here -->
 <div class="header page-hed">
 	<div class="container">
 	<div class="logo p-log">
@@ -12,14 +11,13 @@
 	<span class="menu"></span>
 	<ul class="navig">
 		<li><a href="/">首页</a></li>
-		<li><a href="{:U('About/about')}">我们</a></li>
+		<li><a href="{:U('Our/about')}">我们</a></li>
 		<li><a href="{:U('Index/gallery')}">画廊</a></li>
-		<li><a href="{:U('Index/blog)}">永恒</a></li>
+		<li><a href="{:U('Index/blog')}">永恒</a></li>
 		<li><a href="/Public/TOP" target="_blank">TOP</a></li>
-		<li><a href="contact.html">商店</a></li>
-		<li><a href="contact.html">蜜月计划</a></li>
-		<li><a href="contact.html" class="active">联系我们</a></li>
-		<li><a href="contact.html">联系我们</a></li>
+		<li><a href="javascript:;">商店</a></li>
+		<li><a href="javascript:;">蜜月计划</a></li>
+		<li><a href="{:U('Our/our')}" class="active">联系我们</a></li>
 	</ul>
 	<script>
 		$( "span.menu" ).click(function() {
@@ -34,7 +32,7 @@
 <div class="content">
 	<div class="container">
 		<div class="gallery">
-			<h3>Contact Us Here</h3>
+			<h3>我们在这里等着你</h3>
 			<div class="map">
 				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1510409.9441035846!2d43.3713615!3d42.3207845!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440cd7e64f626b%3A0x4f907964122d4ac2!2sGeorgia!5e0!3m2!1sen!2sin!4v1419301288570"  frameborder="0" style="border:0"></iframe>
 				<div class="address">
@@ -48,15 +46,15 @@
 			</div>
 						<div class="contact-box">
 				<div class="text">
-					<input type="text" placeholder="Name" required="">
-					<input type="text" placeholder="Email" required="">
-					<input type="text" placeholder="Subject" required="">
+					<input type="text" placeholder="姓名" required="">
+					<input type="text" placeholder="电子邮件地址" required="">
+					<input type="text" placeholder="标题" required="">
 				</div>
 				<div class="text">
-					<textarea placeholder="Message" required=""></textarea>
+					<textarea placeholder="信息内容" required=""></textarea>
 				</div>
 				<div class="text">
-					<input type="submit" />
+					<input type="submit" value="发送"/>
 				</div>
 			</div>
 		</div>
